DZ1: run kroz forkovan JVM (exec:exec) + JOGL module flagovi
exec:java je pokretao app u Maven-ovom JVM-u pod custom classloader-om,
gde gluegen_rt JNI (LoadLibraryExW) ne uspeva da se veze -> 0 GL profila
-> "GL4 not available, but: []". Fork preko exec:exec resava JNI binding.
JOGL 2.6.0 je modularni jar (jogl.all) pa --add-exports otvara NEWT/util
pakete ka unnamed modulu.